--- a/Assignment 2 Classes and Inheritance/Assignment 2 Classes and Inheritance.csproj
+++ b/Assignment 2 Classes and Inheritance/Assignment 2 Classes and Inheritance.csproj
@@ -43,8 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Dishwasher.cs" />
+    <Compile Include="Microwave.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Refridgerator.cs" />
+    <Compile Include="Appliance.cs" />
+    <Compile Include="Vacuum.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
